err/pycam.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycam'...
Listing './lib/python3.5/site-packages/pycam/Cutters'...
Listing './lib/python3.5/site-packages/pycam/Exporters'...
Listing './lib/python3.5/site-packages/pycam/Geometry'...
Compiling './lib/python3.5/site-packages/pycam/Geometry/PolygonExtractor.py'...
***   File "./lib/python3.5/site-packages/pycam/Geometry/PolygonExtractor.py", line 56
    if DEBUG_POLYGONEXTRACTOR2: print "points=", path.points
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pycam/Gui'...
Compiling './lib/python3.5/site-packages/pycam/Gui/Project.py'...
***   File "./lib/python3.5/site-packages/pycam/Gui/Project.py", line 267
    print "KEY:", event
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pycam/Gui/Settings.py'...
***   File "./lib/python3.5/site-packages/pycam/Gui/Settings.py", line 144
    except ConfigParser.ParsingError, err_msg:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycam/Gui/SimpleGui.py'...
***   File "./lib/python3.5/site-packages/pycam/Gui/SimpleGui.py", line 322
    print "Time elapsed: %f" % (time.time() - start_time)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycam/Gui/Visualization.py'...
***   File "./lib/python3.5/site-packages/pycam/Gui/Visualization.py", line 121
    print "rot=<%g,%g,%g>" % (xrot,yrot,zrot)
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pycam/Importers'...
Compiling './lib/python3.5/site-packages/pycam/Importers/STLImporter.py'...
***   File "./lib/python3.5/site-packages/pycam/Importers/STLImporter.py", line 68
    print "STL binary/ascii detection failed"
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pycam/PathGenerators'...
Compiling './lib/python3.5/site-packages/pycam/PathGenerators/DropCutter.py'...
***   File "./lib/python3.5/site-packages/pycam/PathGenerators/DropCutter.py", line 230
    print "^", "%sl=%s" % (order[0], last[0]), \
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycam/PathGenerators/PushCutter.py'...
***   File "./lib/python3.5/site-packages/pycam/PathGenerators/PushCutter.py", line 287
    if DEBUG_PUSHCUTTER: print "< cl=",cl,",d=",-d,",t=",t.id,",t.n=",t.normal(),",n=",n
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pycam/PathProcessors'...
Compiling './lib/python3.5/site-packages/pycam/PathProcessors/PathAccumulator.py'...
***   File "./lib/python3.5/site-packages/pycam/PathProcessors/PathAccumulator.py", line 23
    print "ERROR: curr_path expected to be empty"
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pycam/PathProcessors/SimpleCutter.py'...
***   File "./lib/python3.5/site-packages/pycam/PathProcessors/SimpleCutter.py", line 28
    print "ERROR: curr_path expected to be empty"
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pycam/Simulation'...
Listing './lib/python3.5/site-packages/pycam/Utils'...
Compiling './lib/python3.5/site-packages/pycam/Utils/iterators.py'...
***   File "./lib/python3.5/site-packages/pycam/Utils/iterators.py", line 77
    print "l=", l
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pycam/Utils/polynomials.py'...
***   File "./lib/python3.5/site-packages/pycam/Utils/polynomials.py", line 166
    print a, "*x+",b,"=0 ", roots
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-pycam'...
Listing './share/python-wheels'...
